--- a/resources/views/users/create.edge
+++ b/resources/views/users/create.edge
@@ -3,13 +3,14 @@
 
 @section('body')  
     <title>Cadastrar</title>
-    <form action="{{ route('users.store') }}" method="POST">
+    <form action="{{ route('users/store') }}" method="POST">
+        <a href="{{ route('sessions/create') }}"> <b>❮ Voltar</b> </a>
         <h3><a href="{{ route('home') }}"> FakeTube </a></h3>
         <h3>Cadastro</h3>
         <input type="text" name="name" placeholder="Nome">
         <input type="email" name="email" placeholder="E-mail">
         <input type="password" name="password" placeholder="Senha">
         <input type="password" name="confirmPassword" placeholder="Confirmar senha">
-        <input type="submit" value="Criar conta"> 
+        <button type="submit">Criar conta</button>
     </form>
 @endsection
