--- a/resources/views/users/edit.edge
+++ b/resources/views/users/edit.edge
@@ -3,13 +3,14 @@
 
 @section('body')  
     <title>Editar perfil</title>
-    <form action="{{ route('users.update') }}" method="POST">
+    <form action="{{ route('users/update') }}?_method=PUT" method="POST">
+        <a href="{{ route('/') }}"><b>❮ Voltar</b> </a>
         <h3><a href="{{ route('home') }}"> FakeTube </a></h3>
         <h3>Alteração de dados</h3>
-        <input type="text" name="name" placeholder="Novo nome">
-        <input type="email" name="email" placeholder="Novo e-mail">
+        <input type="text" name="name" placeholder="Novo nome" value="{{userName}}">
+        <input type="email" name="email" placeholder="Novo e-mail" value="{{userEmail}}">
         <input type="password" name="password" placeholder="Nova senha">
         <input type="password" name="confirmPassword" placeholder="Confirmar nova senha">
-        <input type="submit" value="Atualizar"> 
+        <button type="submit">Atualizar</button>
     </form>
 @endsection
