--- a/resources/views/layouts/form.edge
+++ b/resources/views/layouts/form.edge
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,6 +28,7 @@
             text-align: center;
             color:black;
         }
+        form input[type='url'],
         form input[type='email'],
         form input[type='text'],
         form input[type='password']{
@@ -38,7 +39,7 @@
             margin: 10px 0;
             border-radius: 20px;
         }
-        form input[type='submit']{
+        form button[type='submit']{
             width: 100%;
             height: 40px;
             cursor: pointer;
@@ -47,11 +48,10 @@
             border: 0;
             border-radius: 20px;
         }
-        form input[type='submit']:hover{
+        form button[type='submit']:hover{
             background-color: rgb(116, 5, 5);
             color: rgb(160, 160, 160);
             transition:250ms;
-            
         }
     </style>
 
