--- a/resources/views/videos/show.edge
+++ b/resources/views/videos/show.edge
@@ -30,7 +30,7 @@
       box-sizing: border-box;
     }
 
-    div {
+    div.normal {
       background-color: aliceblue;
       max-width: 620px;
       width: 70%;
@@ -107,26 +107,121 @@
     h2 {
       text-align: center;
     }
+
+    .dropbtn {
+      position: absolute;
+      width: auto;
+      height: auto;
+      padding: 8px;
+      right: 70px;  
+      
+      background-color: #e73e00;
+      color:rgb(255, 255, 255);
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+      border-radius: 20px;
+    }
+
+    div.dropdown {
+      
+      max-width: 620px;
+      width: 70%;
+      padding: 20px;
+      position: absolute;
+      left: -50px;
+      top: 0%;
+      transform: translate(-50%, 0%);
+      border-radius: 20px;
+      text-align: left;
+      display: table;
+    }
+
+    div.dropdown-content {
+      
+      max-width: 620px;
+      width: 70%;
+      padding: 20px;
+      position: absolute;
+      left: 450px;
+      top: 10%;
+      transform: translate(-50%, 25%);
+      border-radius: 20px;
+      text-align: justify;
+
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+      right: 100px;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      right: 100px;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0);
+      z-index: 1;
+    }
+
+    .dropdown-content a {
+      color: black;
+      right: 100px;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #f9f9f9;
+      transition: 250ms;
+      }
+
+    .dropdown:hover .dropdown-content{
+      display: block;
+      transition: 250ms;
+    }
+
+    .dropdown:hover .dropbtn {
+      background-color: #792202;
+      transition: 250ms;
+    }
   </style>
 </head>
 
 <body>
   <main>
-    <div>
+    <div class="normal">
       @if(auth.isLoggedIn && auth.user.name == userName)
         <a class="edit" href="{{ route('videos/edit', {id: videoId}) }}">Editar</a>
         <form action="{{ route('videos/delete', {id: videoId}) }}?_method=DELETE" method="POST">
           <button type="submit" class="delete">Deletar</button>
         </form>
+
       @endif
-      
-      <a href="{{ route('videos/list') }}"><b>❮ Lista de vídeos </b> </a>
-      @if(auth.isLoggedIn)
-        <br>
-        <a href="{{ route('videos/history') }}"><b>❮ Vídeos vistos </b> </a>
-      @endif
-      <br>
-      <a href="{{ route('videos/latest') }}"><b>❮ Últimos vídeos </b> </a>
+
+      <div class="dropdown">
+          <button class="dropbtn">Vídeos</button>
+          <div class="dropdown-content">
+
+            <a href="{{ route('videos/list') }}"><b>❮ Lista de vídeos </b> </a>
+            @if(auth.isLoggedIn)
+            <br>
+            <a href="{{ route('videos/history') }}"><b>❮ Vídeos vistos </b> </a>
+            @endif
+            <br>
+            <a href="{{ route('videos/latest') }}"><b>❮ Últimos vídeos </b> </a>
+            
+            
+
+          
+          </div>
+        </div>
+        
+        
       
       <h1><a href="{{ route('home') }}"> FakeTube </a></h1>
       <h2>{{ videoName }}</h2>
@@ -137,14 +232,23 @@
         <br>
 
         <h4>Enviado por: {{ userName }}</h4>
-      
+
+        <p>{{ videoDescription }}</p>
+        
       <p id="view">Visualizações: {{videoViews}}</p>
       @if(auth.isLoggedIn)
-        <p>{{ videoDescription }}</p>
+        @each(id in videoIds)
+            @if(videoId == id)
+              <b><h3>Vídeo visualizado</h3></b>
+            @endif
+        @endeach
+      @endif
+      @if(auth.isLoggedIn)
           <form action="{{ route('videos/addToHistory', {id: videoId}) }}?_method=POST" method="POST">
             <button type="submit" class="markAsViewed">Marcar como visto</button>
           </form>
       @endif
+      
     </div>
   </main>
 </body>
